# docs/swagger.json
@@ -6,7 +6,6 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "127.0.0.1:5050",
     "basePath": "/api/v1",
     "paths": {
         "/statistics": {
@@ -34,7 +33,7 @@
                     },
                     {
                         "type": "string",
-                        "description": "Конец промежутся рассмотрения статистика (не включительно), формат: YYYY-MM-DD",
+                        "description": "Конец промежутка рассмотрения статистики (не включительно), формат: YYYY-MM-DD",
                         "name": "to",
                         "in": "query"
                     }
@@ -63,7 +62,7 @@
         },
         "/tasks": {
             "get": {
-                "description": "Просмотр списка задач с опцианальной пагинацией",
+                "description": "Просмотр списка задач с опциональной фильтрацией по автору и пагинацией",
                 "produces": [
                     "application/json"
                 ],
@@ -74,7 +73,13 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Размер страницы с задачами",
+                        "description": "Фильтрация задач по ID автора",
+                        "name": "user_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Размер страницы с задачами (по умолчанию 50, максимум 500)",
                         "name": "limit",
                         "in": "query"
                     },
@@ -110,7 +115,7 @@
                 }
             },
             "post": {
-                "description": "Создать новоую задачу в системе",
+                "description": "Создать новую задачу в системе",
                 "consumes": [
                     "application/json"
                 ],
@@ -128,7 +133,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_features_tasks_transport_http.CreateTaskRespons"
+                            "$ref": "#/definitions/internal_features_tasks_transport_http.CreateTaskRequest"
                         }
                     }
                 ],
@@ -136,11 +141,17 @@
                     "201": {
                         "description": "Успешно созданная задача",
                         "schema": {
-                            "$ref": "#/definitions/internal_features_tasks_transport_http.CreateTaskRespons"
+                            "$ref": "#/definitions/internal_features_tasks_transport_http.CreateTaskResponse"
                         }
                     },
                     "400": {
                         "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Автор не найден",
                         "schema": {
                             "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_response.ErrorResponse"
                         }
@@ -240,7 +251,7 @@
                 }
             },
             "patch": {
-                "description": "Обновляет информацию об уже существующей в системе задаче\n### Логика обновления полей (Three-state logic):\n1. **Поле не передано**: 'description' игнорируется, значение в БД не меняется\n2. **Явно передано значение**: '\"description\": \"Утром в 06:30 выйти на прогулку с Бобиком\" •\n3. **Явно передан null**: '\"description\": null'- очищает поле в БД (set to NULL)\nОграничения: 'title\" и 'completed' не могут быть выставлены как null",
+                "description": "Обновляет информацию об уже существующей в системе задаче\n### Логика обновления полей (Three-state logic):\n1. **Поле не передано**: 'description' игнорируется, значение в БД не меняется\n2. **Явно передано значение**: '\"description\": \"Утром в 06:30 выйти на прогулку с Бобиком\"'\n3. **Явно передан null**: '\"description\": null' - очищает поле в БД (set to NULL)\nОграничения: 'title' и 'completed' не могут быть выставлены как null",
                 "consumes": [
                     "application/json"
                 ],
@@ -271,9 +282,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешно изманённая задача",
+                        "description": "Успешно изменённая задача",
                         "schema": {
-                            "$ref": "#/definitions/internal_features_tasks_transport_http.PatchUserResponse"
+                            "$ref": "#/definitions/internal_features_tasks_transport_http.PatchTaskResponse"
                         }
                     },
                     "400": {
@@ -305,7 +316,7 @@
         },
         "/users": {
             "get": {
-                "description": "Просмотр списка пользователей с опцианальной пагинацией",
+                "description": "Просмотр списка пользователей с опциональной пагинацией",
                 "produces": [
                     "application/json"
                 ],
@@ -316,7 +327,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Размер страницы с пользователями",
+                        "description": "Размер страницы с пользователями (по умолчанию 50, максимум 500)",
                         "name": "limit",
                         "in": "query"
                     },
@@ -473,6 +484,12 @@
                             "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_response.ErrorResponse"
                         }
                     },
+                    "409": {
+                        "description": "У пользователя есть задачи",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_response.ErrorResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
@@ -560,28 +577,6 @@
                 }
             }
         },
-        "github_com_dadqeds_todoapp_internal_core_transport_http_types.Nullable-bool": {
-            "type": "object",
-            "properties": {
-                "set": {
-                    "type": "boolean"
-                },
-                "value": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "github_com_dadqeds_todoapp_internal_core_transport_http_types.Nullable-string": {
-            "type": "object",
-            "properties": {
-                "set": {
-                    "type": "boolean"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
         "internal_features_statistics_transport_http.GetStatisticsResponse": {
             "type": "object",
             "properties": {
@@ -589,11 +584,11 @@
                     "type": "string",
                     "example": "1m30s"
                 },
-                "tasks_complited": {
+                "tasks_completed": {
                     "type": "integer",
                     "example": 10
                 },
-                "tasks_complited_rate": {
+                "tasks_completed_rate": {
                     "type": "number",
                     "example": 20
                 },
@@ -603,7 +598,32 @@
                 }
             }
         },
-        "internal_features_tasks_transport_http.CreateTaskRespons": {
+        "internal_features_tasks_transport_http.CreateTaskRequest": {
+            "type": "object",
+            "required": [
+                "author_user_id",
+                "title"
+            ],
+            "properties": {
+                "author_user_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 1000,
+                    "minLength": 1,
+                    "example": "2 литра, 3.2%"
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 1,
+                    "example": "Купить молоко"
+                }
+            }
+        },
+        "internal_features_tasks_transport_http.CreateTaskResponse": {
             "type": "object",
             "properties": {
                 "author_user_id": {
@@ -665,17 +685,20 @@
             "type": "object",
             "properties": {
                 "completed": {
-                    "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_types.Nullable-bool"
+                    "type": "boolean",
+                    "example": true
                 },
                 "description": {
-                    "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_types.Nullable-string"
+                    "type": "string",
+                    "example": "2 литра"
                 },
                 "title": {
-                    "$ref": "#/definitions/github_com_dadqeds_todoapp_internal_core_transport_http_types.Nullable-string"
+                    "type": "string",
+                    "example": "Купить молоко"
                 }
             }
         },
-        "internal_features_tasks_transport_http.PatchUserResponse": {
+        "internal_features_tasks_transport_http.PatchTaskResponse": {
             "type": "object",
             "properties": {
                 "author_user_id": {
